Agregar nuevas funcionalidades

--- a/config/vehiculo/templates/users/login.html
+++ b/config/vehiculo/templates/users/login.html
@@ -32,6 +32,7 @@
             <h2 class="text-center mb-4">Login</h2>
             <form method="post">
                 {% csrf_token %}
+                <input type="hidden" name="next" value="{{ request.GET.next }}">
                 <div class="form-group mb-3">
                     <label for="username" class="form-label">Username</label>
                     <input type="text" name="username" class="form-control rounded-3">
@@ -43,8 +44,7 @@
                 <button type="submit" class="btn btn-primary w-100 rounded-3">Login</button>
             </form>
         </div>
-        <p class="text-center mt-3">Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
-
+        <p class="text-center mt-3">¿No tienes una cuenta? <a href="{% url 'register' %}">Regístrate aquí</a></p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
