--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -21,7 +21,9 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="/vehiculo/add">Agregar</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/vehiculo/list">Listar</a></li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'listar_vehiculos' %}">Listar</a></li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
@@ -35,7 +37,10 @@
                         </form>
                     </li>
                     {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                    <li class="nav-item">
+                        <a class="btn btn-primary btn-lg shadow-sm" href="{% url 'login' %}">Login de
+                            Usuarios</a>
+                    </li>
                     {% endif %}
                 </ul>
             </div>
