--- a/config/vehiculo/templates/users/register.html
+++ b/config/vehiculo/templates/users/register.html
@@ -17,7 +17,6 @@
                 <h2 class="text-center mb-4 fs-3">Registro</h2>
                 <form method="post">
                     {% csrf_token %}
-
                     {% for field in form %}
                     <div class="form-group mb-4">
                         {{ field.label_tag }}
@@ -27,10 +26,11 @@
                         {% endif %}
                     </div>
                     {% endfor %}
-
-
                     <button type="submit" class="btn btn-primary btn-lg w-100 rounded-3">Registrar</button>
                 </form>
+                <div class="mt-3">
+                    <a class="col-md-4 mx-auto mb-6 btn btn-info" href="{% url 'login' %}">Login</a>
+                </div>
             </div>
         </div>
     </div>
