--- a/config/vehiculo/templates/vehiculo/listar.html
+++ b/config/vehiculo/templates/vehiculo/listar.html
@@ -5,6 +5,10 @@
 {% block content %}
 <div class="container mt-4">
     <h1 class="mb-4">Listado de Vehículos</h1>
+    <div class="mt-1">
+        <a class="btn btn-dark" href="{% url 'add_vehiculo' %}">Agregar Vehículos</a>
+    </div>
+    <hr>
     <div class="table-responsive">
         <table class="table table-striped border rounded-3 overflow-hidden">
             <thead class="table-dark">
