--- a/config/vehiculo/templates/vehiculo/listar.html
+++ b/config/vehiculo/templates/vehiculo/listar.html
@@ -3,6 +3,17 @@
 {% block title %}Vehículos{% endblock %}
 
 {% block content %}
+{% if messages %}
+<div class="mb-3">
+    {% for message in messages %}
+    <div
+        class="alert {% if message.tags == 'success' %} alert-success {%else%} alert-danger {%endif%} rounded-3 d-flex justify-content-between align-items-center">
+        <span>{{ message }}</span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
 <div class="container mt-4">
     <h1 class="mb-4">Listado de Vehículos</h1>
     <div class="mt-1">
