--- a/config/vehiculo/templates/vehiculo/listar.html
+++ b/config/vehiculo/templates/vehiculo/listar.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% if messages %}
-<div class="mb-3">
+<div class="mb-3" id="message-container">
     {% for message in messages %}
     <div
         class="alert {% if message.tags == 'success' %} alert-success {%else%} alert-danger {%endif%} rounded-3 d-flex justify-content-between align-items-center">
